--- a/package.json
+++ b/package.json
@@ -14,13 +14,17 @@
     "@types/react-dom": "18.2.4",
     "eslint": "8.40.0",
     "eslint-config-next": "13.4.2",
+    "json-server": "^0.17.3",
     "next": "13.4.2",
     "phosphor-react": "^1.4.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.43.9",
     "react-modal": "^3.16.1",
+    "react-toastify": "^9.1.3",
     "styled-components": "^6.0.0-rc.1",
-    "typescript": "5.0.4"
+    "typescript": "5.0.4",
+    "yup": "^1.1.1"
   },
   "devDependencies": {
     "@types/react-modal": "^3.16.0"
